lanecwe-Prod/src/objects/CONMAN_Contract__c.object
<CustomObject>
    <description>Used for Contract Management going forward as part of the ConMan project</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to set the relationship between Conman Contract and Account</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CONMAN_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent To Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_URL__c</fullName>
        <label>Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>Placeholder for CONMAN CM-104</description>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Approval_Status__c</fullName>
        <description>Allows someone to set the Legal Approval Status to Requested, Approved, or Rejected</description>
        <label>Legal Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CONMAN_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Approval_Status__c</fullName>
        <description>Shows if Pricing Approval has been Requested, Approved, or Rejected</description>
        <label>Pricing Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SlesgatewayID__c</fullName>
        <label>SalesgatewayID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <description>Shows the Account Owner&apos;s Name</description>
        <formula>Account_Name__r.Owner.FirstName + &quot; &quot; +  Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Source__c</fullName>
        <label>z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>z_unittype__c</fullName>
        <description>used to identify the email template in workflow Email Contract created in SFDC</description>
        <label>z-unittype</label>
        <picklist>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PGi Contract</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>CONMAN Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PGi Contracts</pluralLabel>
    <recordTypes>
        <fullName>Sales_Gateway_Contract</fullName>
        <active>true</active>
        <label>Sales Gateway Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>eCommerce_Contract</fullName>
        <active>true</active>
        <label>eCommerce Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>